[gd_scene load_steps=12 format=3 uid="uid://ccl2kenwh73ve"]

[ext_resource type="Script" path="res://scenes/combat.gd" id="1_lnnkv"]
[ext_resource type="Texture2D" uid="uid://bbdqmbw0615rc" path="res://art/prototyping/combatscreen_no_combat.png" id="2_cwvdc"]
[ext_resource type="Texture2D" uid="uid://yfhqg1amblqt" path="res://art/prototyping/realtabletest2.png" id="3_r2h8u"]
[ext_resource type="PackedScene" uid="uid://3m5ea5q8mf5e" path="res://scenes/character.tscn" id="3_yoqcy"]
[ext_resource type="Texture2D" uid="uid://cbkae02juionm" path="res://art/prototyping/monster.png" id="4_ydnap"]
[ext_resource type="PackedScene" uid="uid://clmylfodosp03" path="res://scenes/dice_mgr.tscn" id="5_6o5ce"]
[ext_resource type="PackedScene" uid="uid://c6lxdy6ovq4ad" path="res://scenes/ability_box.tscn" id="6_vs2ql"]
[ext_resource type="FontFile" uid="uid://bncijok7osr4i" path="res://fonts/CrayonLibre.ttf" id="8_tih6j"]
[ext_resource type="Shader" path="res://scenes/screen.gdshader" id="8_w723f"]
[ext_resource type="PackedScene" uid="uid://x3clfwsacs1s" path="res://scenes/relic.tscn" id="10_u2m6l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hvqtu"]
shader = ExtResource("8_w723f")
shader_parameter/brightness = 1.0
shader_parameter/contrast = 1.0
shader_parameter/saturation = 1.0

[node name="combat" type="Node2D" node_paths=PackedStringArray("dice_mgr")]
script = ExtResource("1_lnnkv")
dice_mgr = NodePath("SubViewportContainer/SubViewport/DiceMgr")

[node name="Combatscreen" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_cwvdc")

[node name="Realtabletest" type="Sprite2D" parent="Combatscreen"]
texture = ExtResource("3_r2h8u")

[node name="RerollButton" type="Button" parent="Combatscreen"]
offset_left = 379.0
offset_top = 409.0
offset_right = 623.0
offset_bottom = 532.0
focus_mode = 0
theme_override_fonts/font = ExtResource("8_tih6j")
theme_override_font_sizes/font_size = 70
text = "ROLL"

[node name="character" parent="Combatscreen" instance=ExtResource("3_yoqcy")]
visible = false
position = Vector2(-289, -410)

[node name="character2" parent="Combatscreen" instance=ExtResource("3_yoqcy")]
visible = false
position = Vector2(241, -413)
sprite_ = ExtResource("4_ydnap")

[node name="Abilities" type="Node2D" parent="Combatscreen"]
y_sort_enabled = true
position = Vector2(447, -145)

[node name="ability_box1" parent="Combatscreen/Abilities" instance=ExtResource("6_vs2ql")]
position = Vector2(42.0002, 49)
scale = Vector2(0.759635, 0.759635)

[node name="ability_box2" parent="Combatscreen/Abilities" instance=ExtResource("6_vs2ql")]
position = Vector2(42.0001, 137)
scale = Vector2(0.759635, 0.759635)

[node name="ability_box3" parent="Combatscreen/Abilities" instance=ExtResource("6_vs2ql")]
position = Vector2(42.0002, 225)
scale = Vector2(0.759635, 0.759635)

[node name="ability_box4" parent="Combatscreen/Abilities" instance=ExtResource("6_vs2ql")]
position = Vector2(42.0001, 313)
scale = Vector2(0.759635, 0.759635)

[node name="ability_box5" parent="Combatscreen/Abilities" instance=ExtResource("6_vs2ql")]
position = Vector2(42.0001, 401)
scale = Vector2(0.759635, 0.759635)

[node name="ability_box6" parent="Combatscreen/Abilities" instance=ExtResource("6_vs2ql")]
position = Vector2(42.0001, 489)
scale = Vector2(0.759635, 0.759635)

[node name="Label" type="Label" parent="Combatscreen"]
modulate = Color(0.121569, 0.117647, 0.121569, 1)
offset_left = 361.0
offset_top = -223.0
offset_right = 820.0
offset_bottom = -139.0
theme_override_fonts/font = ExtResource("8_tih6j")
theme_override_font_sizes/font_size = 70
text = " Mode: "

[node name="ModeVal" type="Label" parent="Combatscreen"]
modulate = Color(0.121569, 0.117647, 0.121569, 1)
offset_left = 575.0
offset_top = -223.0
offset_right = 1034.0
offset_bottom = -139.0
theme_override_fonts/font = ExtResource("8_tih6j")
theme_override_font_sizes/font_size = 70
text = "?
"

[node name="PlayerHealth" type="Label" parent="Combatscreen"]
modulate = Color(0.121569, 0.117647, 0.121569, 1)
offset_left = -785.0
offset_top = -470.0
offset_right = -637.0
offset_bottom = -418.0
theme_override_fonts/font = ExtResource("8_tih6j")
theme_override_font_sizes/font_size = 42
text = "77/77"

[node name="MonsterHealth" type="Label" parent="Combatscreen"]
modulate = Color(0.121569, 0.117647, 0.121569, 1)
offset_left = 768.0
offset_top = -461.0
offset_right = 916.0
offset_bottom = -409.0
theme_override_fonts/font = ExtResource("8_tih6j")
theme_override_font_sizes/font_size = 42
text = "77/77"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="DiceMgr" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_6o5ce")]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
material = SubResource("ShaderMaterial_hvqtu")

[node name="relic" parent="." instance=ExtResource("10_u2m6l")]
position = Vector2(58, 120)
